--- a/baizhi_Spring_01/pom.xml
+++ b/baizhi_Spring_01/pom.xml
@@ -43,5 +43,10 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.48</version>
+        </dependency>
     </dependencies>
 </project>
