--- a/baizhi_Spring_03/pom.xml
+++ b/baizhi_Spring_03/pom.xml
@@ -18,6 +18,11 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>5.1.14.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
             <version>5.1.14.RELEASE</version>
         </dependency>
