:white_check_mark: 注解的基础概念

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>baizhi_Spring_02</module>
         <module>baizhi_Spring_03</module>
         <module>baizhi_Spring_Web</module>
+        <module>baizhi_SPring_annotaion01</module>
     </modules>
 
     <properties>
