:white_check_mark: 高级注解：测试@Configuartion代替xml文件、@Bean注解创建简单对象和复杂对象（Connection）

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>baizhi_Spring_03</module>
         <module>baizhi_Spring_Web</module>
         <module>baizhi_SPring_annotaion01</module>
+        <module>baizhi_Spring_annotaion02</module>
     </modules>
 
     <properties>
